<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">inpix</string>
    <string name="acceso_al_evento">Input now!</string>
    <string name="avanzar"><![CDATA[Next >]]></string>
    <string name="button_continue">Continue</string>
    <string name="button_exit">Exit</string>
    <string name="camera_error_title">Error</string>
    <string name="cannot_connect_camera">Camera Error</string>
    <string name="codigo_organizador">Input the event code</string>
    <string name="confirm_restore_message">Restore default values</string>
    <string name="contactanos">If you want to use Inpix for your event, contact us...</string>
    <string name="details_ok">OK</string>
    <string name="entra_al_evento"><![CDATA[Input now! >]]></string>
    <string name="hintCode">Code</string>
    <string name="hintNewUser">Name</string>
    <string name="label_newuser">Please, tell me your name</string>
    <string name="name_images">Please, tell me about you</string>
    <string name="take_photo">Take photo ></string>
    <string name="access_sd_fail">Error to access ram.</string>
    <string name="hello">Hello</string>
    <string name="button_change_event"><![CDATA[< Change event]]></string>
    <string name="message_nature">Nature</string>
    <string name="message_india">India</string>
    <string name="confirm_restore_title">Restore default values</string>
    <string name="dummy_content">inpix</string>
    <string name="gallery_camera_bucket_name">inpix</string>
    <string name="gallery_camera_videos_bucket_name">inpix</string>
    <string name="no_storage">No storage space</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_settings_category">Configuración Camara</string>
    <string name="pref_camera_jpegquality_default">superfine</string>
    <string name="pref_camera_focusmode_default">auto</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_no_flash">no_flash</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candlelight</string>
    <string name="pref_restore_title">Camera settings</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="preparing_sd">Preparing SD card</string>
    <string name="settings">Settings</string>
    <string name="settings_get_lightbox">Get Lightbox</string>
    <string name="settings_get_lightbox_summary">Get Inpix app to efects into your pictures</string>
    <string name="settings_preview_animation">Disable preview animation</string>
    <string name="settings_preview_animation_summary">Disable preview animation, next take a photo</string>
    <string name="settings_sound_fx">Disable sound</string>
    <string name="settings_sound_fx_summary">Disable sound</string>
    <string name="title_activity_splash">inpix</string>
    <string name="zoom_control_title">Zoom</string>
    <string name="image_file_name_format">\"\'IMG\'_yyyyMMdd_HHmmss\"</string>
    <string name="label_welcome">Welcome</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6730477026847063/3221705772</string>
    <string name="activities_about_version">Version</string>
    <string name="activities_main_share"><![CDATA[Share >]]></string>
    <string name="activities_main_cancel"><![CDATA[< Cancel]]></string>
    <string name="activities_main_sure">Are you sure?</string>
    <string name="activities_main_yes">yes</string>
    <string name="activities_main_no">no</string>
    <string name="activities_main_img_shared">Picture shared successful!</string>
    <string name="activities_main_discard">Are you discard the photo?</string>
    <string name="your_pics">Your photos ara at</string>
    <string name="activities_user_name">Name</string>
    <string name="activities_user_email">e-mail</string>
    <string name="email_invalid" />
    <string name="img">img</string>
    <string name="invite_take_images">Te invitamos a compartir fotos que cuenten que es</string>
    <string name="invite_take_images_2" />
    <string name="last_pics">Lastest</string>
    <string name="my_pics">Mine</string>
    <string name="ranking">Rank</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="vote_or_share">"Share or vote images about "</string>
    <string name="activities_main_no_connect">Internet connection failed, please check to upload your image</string>
    <string name="our_life_in_pictures">Our life in pictures</string>

    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="activities_user_new_error">error on create user</string>
</resources>