<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytCode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E84E1B"
    android:elevation="24dp"
    android:gravity="center_horizontal"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:src="@drawable/logo_pantalla" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytUserData"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/frameLayout2"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.36"
            android:gravity="bottom|left|center_horizontal"
            android:text="@string/name_images"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_round_withe"
            android:gravity="center|left"
            android:hint="@string/activities_user_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="25px"
            android:paddingRight="25px"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_round_withe"
            android:gravity="center|left"
            android:hint="@string/activities_user_email"
            android:inputType="textEmailAddress"
            android:maxLength="500"
            android:maxLines="1"
            android:paddingLeft="25px"
            android:paddingRight="25px"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="18dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_register"
            style="@style/button_textmax.red"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_round_black"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:text="@string/avanzar"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>