<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:weightSum="1">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout5"
        android:contentDescription="@string/dummy_content"
        android:paddingBottom="15dp"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:background="@color/black_overlay"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/inpix"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgLogo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imgLogo"
                android:layout_toEndOf="@+id/imgLogo"
                android:layout_toRightOf="@+id/imgLogo"
                android:gravity="right|center_vertical"
                android:paddingBottom="3dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:text="@string/vote_or_share"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                tools:ignore="UnknownId" />

            <ImageView
                android:id="@+id/imgLogo"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left|center_vertical"
                android:layout_toEndOf="@+id/btnBack"
                android:layout_toRightOf="@+id/btnBack"
                android:contentDescription="@string/img"
                android:foregroundGravity="left"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp"
                android:src="@drawable/logo_pantalla"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btnBack"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/img"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/btn_back_w"
                android:visibility="visible" />

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/mainActivity_tabs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:tabIndicatorColor="@color/inpix"
        app:tabSelectedTextColor="@color/inpix"
        app:tabTextColor="@android:color/darker_gray">

        <android.support.design.widget.TabItem
            android:id="@+id/btnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking" />

        <android.support.design.widget.TabItem
            android:id="@+id/btnClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_pics" />

        <android.support.design.widget.TabItem
            android:id="@+id/btnOwns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_pics" />

    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/mainActivity_tabs"
        android:paddingTop="1dp">

        <GridView
            android:id="@+id/grid1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:columnWidth="200dp"
            android:gravity="center_vertical|center"
            android:horizontalSpacing="2dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="198dp" />

        <ImageView
            android:id="@+id/fullImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/dummy_content"
            android:elevation="24dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/border_last_picture_pressed"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddPhoto"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:elevation="0dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_quickcam_inverse"
        app:backgroundTint="@color/inpix"
        app:fabSize="normal" />

</RelativeLayout>